--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="icon" href="./assets/favicon.svg" type="image/svg+xml">
 	<link rel="stylesheet" href="./assets/css/styles.css">
 	<script defer src="./assets/js/main.js"></script>
-	<meta property="og:title" content="Властелин песоных кур и ко — PM Hub"/>
+	<meta property="og:title" content="Властелин печоных кур и ко — PM Hub"/>
 	<meta property="og:description" content="Статьи по продукту, эксперименты с ИИ и услуги: консультации и ревшар."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://brogital.github.io/pmhub/"/>
@@ -89,4 +89,3 @@
 	</footer>
 </body>
 </html>
-
