--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<section class="section hero">
 			<div class="container">
 				<div class="eyebrow">PM Hub</div>
-				<h1>Властелин песоных кур и ко</h1>
+				<h1>Властелин печоных кур и ко</h1>
 				<p class="muted">Статьи про продукт, услуги с записью и эксперименты с ИИ, чтобы запускать быстрее.</p>
 				<div class="actions">
 					<a class="button" href="./articles/index.html">К статьям</a>
