Добавлена игра Змейка в раздел экспериментов

--- a/experiments/index.html
+++ b/experiments/index.html
@@ -37,6 +37,7 @@
 					<article class="card"><h3><a href="code-vibes.html">Vibe‑кодинг прототипов</a></h3><p>Как быстро собрать работающий прототип, не ломая архитектуру.</p><div class="tags"><a class="chip" href="../tags/ai.html">ai</a></div></article>
 					<article class="card"><h3><a href="evals-metrics.html">Метрики для LLM‑фич</a></h3><p>Собираем простые эвалы и оффлайн‑метрики качества ответа.</p><div class="tags"><a class="chip" href="../tags/ai.html">ai</a></div></article>
 					<article class="card"><h3><a href="ops-tooling.html">Ops для ИИ‑фич</a></h3><p>Логи, наблюдаемость и деградации. Как не выгореть на поддержке.</p><div class="tags"><a class="chip" href="../tags/ai.html">ai</a></div></article>
+									<article class="card"><h3><a href="snake.html">Игра Змейка</a></h3><p>Классическая игра Змейка, реализованная на JavaScript.</p><div class="tags"><a class="chip" href="../tags/game.html">game</a></div></article>
 				</div>
 				<p><a class="button" href="./index.html">Смотреть ещё</a></p>
 			</div>
