Исправлены проблемы с наложением блоков и обновлен дизайн в соответствии с гайдлайнами macOS

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 			<div class="container">
 				<div class="eyebrow">PM Hub</div>
 				<h1>Властелин печоных кур и ко</h1>
-				<p class="muted">Статьи про продукт, услуги с записью и эксперименты с ИИ, чтобы запускать быстрее.</p>
+				<p class="tagline">Статьи про продукт, услуги с записью и эксперименты с ИИ, чтобы запускать быстрее.</p>
+
 				<div class="actions">
 					<a class="button" href="./articles/index.html">К статьям</a>
 					<a class="button secondary" href="./experiments/index.html">Шатаем ИИ</a>
